@@ -7,6 +7,7 @@
     "grunt-contrib-watch": "~0.2.0",
     "grunt-contrib-sass": "~0.2.2",
     "grunt-contrib-copy": "~0.4.0",
-    "grunt-contrib-jshint": "~0.4.0"
+    "grunt-contrib-jshint": "~0.4.0",
+    "grunt-contrib-clean": "~0.5.0"
   }
 }
